# beastybar

./: .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  Dockerfile  EVALUATION_REPORT.md  H100_GPU_OPTIMIZATION_PLAN.md  OPTIMIZATION_PROMPT.md  PHASE4_PLAN.md  PHASE4_PROGRESS.md  PHASE5_PLAN.md  PHASE5_PROGRESS.md  PHASE6_PLAN.md  PHASE6_PROGRESS.md  PROJECT_LEARNINGS.md  ROADMAP_TO_SUPERHUMAN.md  RUN_REPORT_iter600_to_961.md  TRAINING_OPTIMIZATION_PLAN.md  TRAINING_REPORT_MCTS_v1.md  __init__.py  benchmark.py  codex5.2_PLAN.md  deepmindclusterNew.md  diegonext.md  eval_report.py  evaluation_results_iter949.json  notes.md  pyproject.toml  readme.md  rules.md  technical.md  todo.md
_01_simulator/: __init__.py  action_space.py  action_space_example.py  actions.py  cards.py  engine.py  exceptions.py  formatting.py  logging_config.py  observations.py  rewards.py  rules.py  simulate.py  state.py
_02_agents/: __init__.py  base.py  diego.py  evaluation.py  first.py  greedy.py  heuristic.py  mcts.py  outcome_heuristic.py  random_agent.py  self_play_rl.py
_03_training/: MCTS_TRAINING.md  OPTIMIZATION_PPO_WARMSTART.md  __init__.py  alphazero_trainer.py  baseline_inventory.md  benchmark.py  checkpoint_manager.py  curriculum.py  elo.py  encoders.py  evaluation.py  example_mcts_training.py  exploit_patch_cycle.py  exploiter_training.py  game_generator.py  game_utils.py  mcts_ppo.py  mcts_self_play.py  mcts_trainer.py  model_selection.py  models.py  opponent_pool.py  opponent_statistics.py  policy_loader.py  population.py  ppo.py  ppo_warmstart.py  progressive_schedule.py  replay_buffer.py  rollout.py  self_play.py  self_play_brief.md  tournament.py  tracking.py  trainer.py  training_loop.md  trajectory.py  utils.py  value_diagnostics.py  vectorized_env.py  (+1 more)
_04_ui/: app.py  claude_agent.py
_05_analysis/: 01_species_embeddings.md  02_behavioral_patterns.md  03_decision_rules.md  04_value_analysis.md  05_attention_patterns.md  06_counterfactual.md  INTERPRETABILITY_PLAN.md  STRATEGY_GUIDE.md  action_distillation.py  analyze_attention.py  analyze_behavioral_patterns.py  analyze_species_embeddings.py  behavioral_patterns_raw.json  causal_probing.py  counterfactual_analysis.py  decision_tree_analysis.py  interaction_mining.py  value_analysis.py
_05_other/: NETWORK_MODE_SWITCHING_IMPLEMENTATION.md  notes.md  technical.md  todo.md
agents/: __init__.py  base.py  baselines.py  diego.py  evaluation.py  first.py  frontrunner.py  greedy.py  heuristic50k.py  killer.py  random_agent.py
beastybar/: __init__.py  cards.py  engine.py  rules.py  simulate.py  state.py
beastybar_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: alphazero_parallel.yaml  alphazero_v2.yaml  alphazero_v2_100sim.yaml  alphazero_v2_10sim.yaml  alphazero_v2_max.yaml  default.yaml  fast.yaml  h100_maxout.yaml  h100_mcts.yaml  h100_mcts_warmstart.yaml  h100_scaled.yaml  h200_maxbatch.yaml  h200_mcts_maxbatch.yaml  h200_optimized.yaml  h200_optimized_v2.yaml  iter600_to_1000.yaml  mcts_schedule_example.yaml  population.yaml  ppo_warmstart.yaml  production.yaml  runpod_h200.yaml  runpod_h200_pool.yaml  superhuman_phase1.yaml
docs/: API.md  DEPLOYMENT.md  RUNPOD_TRAINING_PLAN.md  TABLEBASE_AWS_PLAN.md  TECHNICAL.md  TRAINING_OPTIMIZATION_MASTER_PLAN.md
other/: technical.md
prompts/: opponent_pool_brainstorm.md  verify_opponent_pool.md
scripts/: CLAUDE_CODE_RUNPOD.md  IMPLEMENTATION_SUMMARY.md  README.md  README_MCTS.md  RUNPOD.md  play.py  (+19 more)
(+230 files in other folders)
