[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beastybar-sim"
version = "0.0.1"
description = "Beasty Bar simulator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<0.31",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["_01_simulator*", "_04_ui*", "_05_other*"]
exclude = ["tests*", "logs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["_05_other/tests"]
pythonpath = [".."]
addopts = "-ra"
