[build-system]
requires = ["setuptools>=61", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beastybar-sim"
version = "0.0.1"
description = "Beasty Bar simulator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<0.31",
    "httpx>=0.27,<0.28",
    "numpy>=2.0,<3.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
cython = [
    "cython>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["_01_simulator*", "_02_agents*", "_03_training*", "_04_ui*", "_05_other*"]
exclude = ["tests*", "logs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["_05_other/tests"]
pythonpath = [".."]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "cython>=3.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "__pycache__", ".git", ".pytest_cache", "beastybar_sim.egg-info"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"_05_other/tests/*" = ["N802", "N803"]  # Allow test function naming

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "_05_other.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "_04_ui.*"
disallow_untyped_defs = false
